# glm2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  main.cpp
glm2/: glm2.h
glm2/core/common/: abs_impl.inl  ceil_impl.inl  clamp_impl.inl  common.h  common_base.h  floatBitsToInt_impl.inl  floatBitsToUint_impl.inl  floor_impl.inl  fma_impl.inl  fms_impl.inl  fract_impl.inl  frexp_impl.inl  intBitsToFloat_impl.inl  isinf_impl.inl  isnan_impl.inl  ldexp_impl.inl  max_impl.inl  min_impl.inl  mix_impl.inl  mod_impl.inl  modf_impl.inl  roundEven_impl.inl  round_impl.inl  sign_impl.inl  smoothstep_impl.inl  step_impl.inl  trunc_impl.inl  uintBitsToFloat_impl.inl
glm2/core/exponential/: exp2_impl.inl  exp_impl.inl  exponential.h  exponential_base.h  fastInversesquare_impl.inl  inversesquare_impl.inl  log2_impl.inl  log_impl.inl  pow_impl.inl  sqrt_impl.inl
glm2/core/geometric/: cross_impl.inl  distance_impl.inl  dot_impl.inl  faceforward_impl.inl  fastNormalize_impl.inl  geometric.h  geometric_base.h  length_impl.inl  normalize_impl.inl  reflect_impl.inl  refract_impl.inl
glm2/core/integer/: bitCount_impl.inl  bitfieldExtract_impl.inl  bitfieldInsert_impl.inl  bitfieldReverse_impl.inl  findLSB_impl.inl  findMSB_impl.inl  imulExtended_impl.inl  integer.h  integer_base.h  uaddCarry_impl.inl  umulExtended_impl.inl  usubBorrow_impl.inl
glm2/core/matrix/: determinant_impl.inl  inverse_impl.inl  matrix.h  matrix_base.h  transpose_impl.inl
glm2/core/packing/: packing.h  packing_base.h  packing_impl.inl
glm2/core/trigonometric/: acos_impl.inl  acosh_impl.inl  asin_impl.inl  asinh_impl.inl  atan_impl.inl  atanh_impl.inl  cos_impl.inl  cosh_impl.inl  degrees_impl.inl  radians_impl.inl  sin_impl.inl  sinh_impl.inl  tan_impl.inl  tanh_impl.inl  (+2 more)
glm2/detail/: internal_util.h  internal_util_impl.inl  intrin.h  intrin_impl.inl
glm2/types/: basic_types.h  constans.h
test/: CMakeLists.txt  main.cpp  test.cpp  test.h
(+159 files in other folders)
